--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "webpack-watch": "webpack -w",
+        "webpack": "webpack",
         "express-server": "node ./server",
-        "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "concurrently --kill-others \"npm run webpack\" \"npm run express-server\"",
+        "build": "NODE_ENV=production npm run webpack",
         "start": "npm run express-server"
     },
     "repository": {
