--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ build
 # misc
 .DS_Store
 npm-debug.log
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
