--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
     "babel-runtime": "6.11.6",
+    "concurrently": "^2.2.0",
     "express": "^4.14.0",
+    "moment": "^2.15.2",
     "node-uuid": "^1.4.7",
     "qrcode.react": "^0.6.1",
     "react": "^15.3.1",
@@ -50,8 +52,7 @@
     "redux": "^3.2.1",
     "redux-thunk": "^1.0.3",
     "webpack": "^1.13.2",
-    "ws": "1.1.1",
-    "concurrently": "^2.2.0"
+    "ws": "1.1.1"
   },
   "engines": {
     "node": "4.4.7"
